syntax = "proto3";

option go_package = "github.com/yatintri/GoAndGrpc/proto";

package train_service;

service TrainService{
    rpc PurchaseTicket(Ticket) returns (Ticket);
    rpc GetReceiptDetails(User) returns (Ticket);
    rpc GetUsersBySection(GetUsersRequest) returns(stream Ticket);
    rpc DeleteUser(User) returns (Ticket);
    rpc ModifyUserSeat(ModifyUserSeatRequest) returns (Ticket);
}

message User{
    string first_name = 1;
    string last_name = 2;
    string email = 3;
}

message Ticket{
    string from = 1;
    string to = 2;
    User user = 3;
    float price = 4;
    string section = 5;
}

message GetUsersRequest{
    string section = 1;
}

message ModifyUserSeatRequest{
    User user = 1;
    string new_seat = 2;
}